--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
 <!--            <artifactId>jstl</artifactId>-->
 <!--            <version>1.2</version>-->
 <!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>7.0.5.Final</version>
+        </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api -->
         <dependency>
